# app-ideas

./: .gitignore  pyproject.toml
Projects/: app.py  google_server.py  lv2-bit-masks.py  lv2_bit_asks_chatGPT.py  lv2_bit_masks.py  lv2_book_finder.py  lv2_calculator.py  lv2_card_memory_game.py  lv2_converter.py  lv2_drawing_app.py  main.py  main_app.py  test.py  ui.py
Projects/.credentials/: client_secret.json  cred.json
Projects/Battleship_game/: game_engine.py  game_ui.py  main.py  main_app.py
Projects/templates/: index.html
